--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,9 +1,19 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/security.html
 security:
+    
+    encoders:
+        AppBundle\Entity\User:
+            algorithm: bcrypt
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
+        our_db_provider:
+            entity:
+                class: AppBundle:User
+                property: username
+                # if you're using multiple entity managers
+                # manager_name: customer
         in_memory:
             memory: ~
 
@@ -12,7 +22,8 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
+            http_basic: ~
+            provider: our_db_provider
         main:
             anonymous: ~
             # activate different ways to authenticate
