--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,17 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    site_manager:
+        class: AppBundle\Site\SiteManager
+
+    current_site_listener:
+        class: AppBundle\EventListener\CurrentSiteListener
+        arguments:
+            - "@site_manager"
+            - "@doctrine.orm.default_entity_manager"
+
+        tags:
+            -
+                name: kernel.event_listener
+                event: kernel.request
+                method: onKernalRequest
