--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,3 +41,7 @@ security:
             
             logout:
                 path: /logout
+                
+        # role_hierarchy:
+        #     ROLE_ADMIN:       [ROLE_USER, ROLE_EVENT_CREATE]
+        #     ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
