--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,7 +41,13 @@ security:
             
             logout:
                 path: /logout
-                
+    access_control:
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/manager/, roles: ROLE_MANAGER }
+        # - { path: ^/admin/users, roles: ROLE_ADMIN }
+        # - { path: ^/admin/reports, roles: ROLE_ADMIN }
+        - { path: ^/, roles: ROLE_USER }
         # role_hierarchy:
         #     ROLE_ADMIN:       [ROLE_USER, ROLE_EVENT_CREATE]
         #     ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
