--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -12,12 +12,12 @@ security:
     providers:
         our_db_provider:
             entity:
-                class: AppBundle:CompanyUser
+                class: AppBundle:User
                 property: email
                 # if you're using multiple entity managers
                 # manager_name: customer
         in_memory:
-            memory: ~
+            memory: ~   
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -26,12 +26,9 @@ security:
             security: false
             http_basic: ~
             provider: our_db_provider
+        
         main:
             anonymous: ~
-            # activate different ways to authenticate
-
-            # http_basic: ~
-            # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
             form_login:
                 login_path: login
@@ -41,13 +38,13 @@ security:
             
             logout:
                 path: /logout
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_MANAGER
+        ROLE_MANAGER: [ROLE_USER, ROLE_ALLOWED_TO_SWITCH]
+
     access_control:
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/manager/, roles: ROLE_MANAGER }
-        # - { path: ^/admin/users, roles: ROLE_ADMIN }
-        # - { path: ^/admin/reports, roles: ROLE_ADMIN }
-        - { path: ^/, roles: ROLE_USER }
-        # role_hierarchy:
-        #     ROLE_ADMIN:       [ROLE_USER, ROLE_EVENT_CREATE]
-        #     ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        # - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        # - { path: ^/api/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^\/manage\b.+, roles: ROLE_MANAGER }
+        # - { path: ^/, roles: ROLE_USER }
