--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -14,6 +14,12 @@ services:
 
     current_site_listener:
         class: AppBundle\EventListener\CurrentSiteListener
-        arguments: ['@site_manager', '@doctrine.orm.default_entity_manager', '@router', '@security.context']
+        arguments: ['@doctrine.orm.default_entity_manager', '@router', '@security.token_storage']
         tags: 
         - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+
+    app.manager_voter:
+        class: AppBundle\Security\ManagerVoter
+        tags:
+        - { name: security.voter }
+        public: false
