--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,19 +7,19 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
-    site_manager:
-        class: AppBundle\Site\SiteManager
-        class: AppBundle\Controller\CustomExceptionController
-        arguments: ['@twig', '%kernel.debug%']
+    # site_manager:
+    #     class: AppBundle\Site\SiteManager
+    #     class: AppBundle\Controller\CustomExceptionController
+    #     arguments: ['@twig', '%kernel.debug%']
 
-    current_site_listener:
-        class: AppBundle\EventListener\CurrentSiteListener
-        arguments: ['@doctrine.orm.default_entity_manager', '@router', '@security.token_storage']
-        tags: 
-        - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+    # current_site_listener:
+    #     class: AppBundle\EventListener\CurrentSiteListener
+    #     arguments: ['@doctrine.orm.default_entity_manager', '@router', '@security.token_storage']
+    #     tags: 
+    #     - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
 
-    app.manager_voter:
-        class: AppBundle\Security\ManagerVoter
-        tags:
-        - { name: security.voter }
-        public: false
+    # app.manager_voter:
+    #     class: AppBundle\Security\ManagerVoter
+    #     tags:
+    #     - { name: security.voter }
+    #     public: false
