--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,12 @@ parameters:
 #    parameter_name: value
 
 services:
+    app.tokens.action_listener:
+        class: AppBundle\EventListener\TokenListener
+        arguments: ['%tokens%']
+        tags:
+            - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
+            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse}
     # check_user_authorized:
     #     class: AppBundle\Dashboard
     #     arguments: ["@request_stack"]
