--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -6,7 +6,7 @@ parameters:
 services:
     app.tokens.action_listener:
         class: AppBundle\EventListener\TokenListener
-        arguments: ['@doctrine.orm.default_entity_manager', '@security.token_storage', '%tokens%']
+        arguments: ['@doctrine.orm.default_entity_manager', '@security.token_storage']
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
 
