--- a/web/package.json
+++ b/web/package.json
@@ -2,15 +2,28 @@
   "name": "totalblu",
   "version": "1.0.0",
   "description": "HR application developed by Akrylic Group",
-  "main": "index.jsx",
-  "author": "",
-  "license": "ISC",
+  "main": "index.js",
   "dependencies": {
+    "express": "^4.15.2",
+    "qs": "^6.4.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router-dom": "^4.0.0",
+    "redux": "^3.6.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.23.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "webpack": "^2.3.3"
-  }
-},
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/webpack -d --watch"
+  },  
+  "author": "",
+  "license": "ISC"
+}
