--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "qs": "^6.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-prop-types": "^0.4.0",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0"
@@ -17,13 +18,14 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/webpack -d --watch"
-  },  
+  },
   "author": "",
   "license": "ISC"
 }
