--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "reducers": "^3.0.0-alpha",
+    "redux-localstorage": "^0.4.1",
+    "redux-thunk": "^2.2.0",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
