--- a/web/package.json
+++ b/web/package.json
@@ -21,11 +21,15 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "install": "^0.8.8",
     "node-sass": "^4.5.2",
+    "npm": "^4.4.4",
     "reducers": "^3.0.0-alpha",
     "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.3",
+    "sass-mixins-loader": "^1.0.3",
+    "sass-resources-loader": "^1.2.1",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
