--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.15.2",
+    "path": "^0.12.7",
     "qs": "^6.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -36,7 +37,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/webpack -d --watch"
+    "start": "./node_modules/.bin/webpack -d --watch",
+    "runnode": "node src/server.js"
   },
   "author": "",
   "license": "ISC"
