--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -13,7 +13,7 @@ security:
         our_db_provider:
             entity:
                 class: AppBundle:User
-                property: email
+                property: emailAddress
                 # if you're using multiple entity managers
                 # manager_name: customer
         in_memory:
