--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "path": "^0.12.7",
     "qs": "^6.4.0",
     "react": "^15.5.4",
+    "react-addons-create-fragment": "^15.5.3",
     "react-dom": "^15.5.4",
     "react-prop-types": "*",
     "react-redux": "^5.0.4",
