--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     "install": "^0.8.8",
     "node-sass": "^4.5.2",
     "npm": "^4.4.4",
+    "react-big-calendar": "^0.13.0",
     "reducers": "^3.0.0-alpha",
     "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.2.0",
