--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.15.2",
+    "moment": "^2.18.1",
     "npm": "^4.5.0",
     "path": "^0.12.7",
     "qs": "^6.4.0",
